[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/items/gun.atlastex" type="Texture" id=1]
[ext_resource path="res://scenes/items/weapons/Gun.gd" type="Script" id=2]
[ext_resource path="res://scenes/items/Item.tscn" type="PackedScene" id=3]

[node name="Gun" instance=ExtResource( 3 )]
script = ExtResource( 2 )
scene = "weapons/Gun"
tag = "weapon:ranged"
cooldown = 0.5

[node name="EquipIcon" parent="." index="1"]
texture = ExtResource( 1 )

[node name="ShootLine" type="RayCast2D" parent="." index="2"]
visible = false
enabled = true
cast_to = Vector2( 300, 0 )
collision_mask = 32
collide_with_areas = true

[node name="CooldownTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="GroundIcon" parent="." index="4"]
texture = ExtResource( 1 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
